// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="TournamentParticipants-root-96"
>
  <header
    className="MuiPaper-root-108 MuiPaper-elevation4-114 MuiAppBar-root-100 MuiAppBar-positionSticky-103 TournamentParticipants-hideOnPrint-98"
  >
    <div
      className="css-10nd86i TournamentParticipants-margined-97"
      id={undefined}
      onKeyDown={[Function]}
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-174 MuiFormControl-fullWidth-177"
      >
        
        <div
          className="MuiInput-root-178 MuiInput-fullWidth-185 MuiInput-formControl-179 MuiInput-underline-182"
        >
          <div
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-186 IntegrationReactSelect-input-136"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value={undefined}
          >
            <div
              className="IntegrationReactSelect-valueContainer-137"
            >
              <p
                className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 IntegrationReactSelect-placeholder-142"
              >
                Select player or enter new player name
              </p>
              <div
                className="css-1hrkh7z"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="add-player"
                    aria-labelledby={undefined}
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    className={undefined}
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1wy0on6"
            >
              <span
                className="css-d8oujb"
              />
              <div
                aria-hidden="true"
                className="css-1ep9fjw"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-19bqh2r"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <ul
    className="MuiList-root-145 MuiList-padding-146 TournamentParticipants-hideOnPrint-98"
  />
  <div
    className="TournamentParticipants-showOnPrint-99"
  >
    <h1
      className="MuiTypography-root-149 MuiTypography-headline-154"
    >
      Participants
    </h1>
    <ul
      className="MuiList-root-145 MuiList-padding-146"
    />
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="TournamentParticipants-root-96"
>
  <header
    className="MuiPaper-root-108 MuiPaper-elevation4-114 MuiAppBar-root-100 MuiAppBar-positionSticky-103 TournamentParticipants-hideOnPrint-98"
  >
    <div
      className="css-10nd86i TournamentParticipants-margined-97"
      id={undefined}
      onKeyDown={[Function]}
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-174 MuiFormControl-fullWidth-177"
      >
        
        <div
          className="MuiInput-root-178 MuiInput-fullWidth-185 MuiInput-formControl-179 MuiInput-underline-182"
        >
          <div
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-186 IntegrationReactSelect-input-136"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value={undefined}
          >
            <div
              className="IntegrationReactSelect-valueContainer-137"
            >
              <p
                className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 IntegrationReactSelect-placeholder-142"
              >
                Select player or enter new player name
              </p>
              <div
                className="css-1hrkh7z"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="add-player"
                    aria-labelledby={undefined}
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    className={undefined}
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1wy0on6"
            >
              <span
                className="css-d8oujb"
              />
              <div
                aria-hidden="true"
                className="css-1ep9fjw"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-19bqh2r"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <ul
    className="MuiList-root-145 MuiList-padding-146 TournamentParticipants-hideOnPrint-98"
  >
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Reinstate Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test0
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Dropped
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Remove Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test1
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 1
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Remove Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test2
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 2
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Remove Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test3
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 0
        </p>
      </div>
    </li>
  </ul>
  <div
    className="TournamentParticipants-showOnPrint-99"
  >
    <h1
      className="MuiTypography-root-149 MuiTypography-headline-154"
    >
      Participants
    </h1>
    <ul
      className="MuiList-root-145 MuiList-padding-146"
    >
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test0
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test1
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test2
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test3
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className="TournamentParticipants-root-96"
>
  <header
    className="MuiPaper-root-108 MuiPaper-elevation4-114 MuiAppBar-root-100 MuiAppBar-positionSticky-103 TournamentParticipants-hideOnPrint-98"
  >
    <div
      className="css-10nd86i TournamentParticipants-margined-97"
      id={undefined}
      onKeyDown={[Function]}
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-174 MuiFormControl-fullWidth-177"
      >
        
        <div
          className="MuiInput-root-178 MuiInput-fullWidth-185 MuiInput-formControl-179 MuiInput-underline-182"
        >
          <div
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-186 IntegrationReactSelect-input-136"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value={undefined}
          >
            <div
              className="IntegrationReactSelect-valueContainer-137"
            >
              <p
                className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 IntegrationReactSelect-placeholder-142"
              >
                Select player or enter new player name
              </p>
              <div
                className="css-1hrkh7z"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="add-player"
                    aria-labelledby={undefined}
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    className={undefined}
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1wy0on6"
            >
              <span
                className="css-d8oujb"
              />
              <div
                aria-hidden="true"
                className="css-1ep9fjw"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-19bqh2r"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <ul
    className="MuiList-root-145 MuiList-padding-146 TournamentParticipants-hideOnPrint-98"
  >
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Reinstate Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test0
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Dropped
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Remove Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test1
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 1
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Remove Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test2
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 2
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <button
        aria-label="Remove Player"
        className="MuiButtonBase-root-207 MuiIconButton-root-201"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-206"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-210"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-217"
        />
      </button>
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test3
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 0
        </p>
      </div>
    </li>
  </ul>
  <div
    className="TournamentParticipants-showOnPrint-99"
  >
    <h1
      className="MuiTypography-root-149 MuiTypography-headline-154"
    >
      Participants
    </h1>
    <ul
      className="MuiList-root-145 MuiList-padding-146"
    >
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test0
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test1
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test2
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test3
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`matches the prior snapshot 4`] = `
<div
  className="TournamentParticipants-root-96"
>
  <ul
    className="MuiList-root-145 MuiList-padding-146 TournamentParticipants-hideOnPrint-98"
  >
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test0
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Dropped
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test1
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 1
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test2
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 2
        </p>
      </div>
    </li>
    <li
      className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-gutters-198"
      disabled={false}
    >
      <div
        className="MuiListItemText-root-224"
      >
        <span
          className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227"
        >
          test3
        </span>
        <p
          className="MuiTypography-root-149 MuiTypography-body1-158 MuiTypography-colorTextSecondary-172 MuiListItemText-secondary-228"
        >
          Points: 0
        </p>
      </div>
    </li>
  </ul>
  <div
    className="TournamentParticipants-showOnPrint-99"
  >
    <h1
      className="MuiTypography-root-149 MuiTypography-headline-154"
    >
      Participants
    </h1>
    <ul
      className="MuiList-root-145 MuiList-padding-146"
    >
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test0
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test1
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test2
          </span>
        </div>
      </li>
      <li
        className="MuiListItem-root-191 MuiListItem-default-194 MuiListItem-dense-195 MuiListItem-gutters-198"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-224 MuiListItemText-dense-226"
        >
          <span
            className="MuiTypography-root-149 MuiTypography-subheading-156 MuiListItemText-primary-227 MuiListItemText-textDense-229"
          >
            test3
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
